--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,14 +2,20 @@
   "manifest_version": 2,
 
   "name": "X Company Enterprises",
-  "description": "This extension for  the ITCS  2155 project site",
-  "version": "1.0",
+  "description": "This extension is for  the ITCS  3155 project site",
+  "version": "1.1",
 
   "browser_action": {
-   "default_icon": "icon_128.png",
+   "default_icon": "LabTechLogo.png",
    "default_popup": "appPopup.html"
   },
+
   "permissions": [
    "activeTab"
-   ]
+  ],
+
+  "web_accessible_resources": [
+    "styling.css",
+    "Font/ApercuPro.ttf"
+  ]
 }
